compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__reserved_word_in_function_arguments.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "pub fn main(func, var) {\n  #(func, var)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(func, var) {
  #(func, var)
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main[I gleam_P.Type[I], J gleam_P.Type[J]](funcʹ I, varʹ J) gleam_P.Tuple2_t[
  I,
  J,
] {
  return gleam_P.Tuple2_t[I, J]{funcʹ, varʹ}
}
