compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__shadowing_current.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "pub fn main() {\n  let main = fn() { 0 }\n  main()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  let main = fn() { 0 }
  main()
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main() gleam_P.Int_t {
  var mainʹ1 gleam_P.Func0_t[gleam_P.Int_t] = func() gleam_P.Int_t { return 0 }
  _ = mainʹ1
  return mainʹ1()
}
