compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__variable_rewriting_in_anon_fn_with_matching_parameter_in_case.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "pub fn bad() {\n  fn(state) {\n    let state = case Nil {\n      _ -> state\n    }\n    state\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn bad() {
  fn(state) {
    let state = case Nil {
      _ -> state
    }
    state
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Bad[J gleam_P.Type[J]]() gleam_P.Func1_t[J, J] {
  return func(state J) J {
    var stateʹ1 J = (func() J {
      var _a gleam_P.Nil_t = gleam_P.Nil_c{}
      _ = _a
      {
        return state
      }
    })()
    _ = stateʹ1
    return stateʹ1
  }
}
